# SS-Dat-Info

./: .gitignore  README.md  index.html  ss-dat-info.code-workspace
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
Display_Config/: README.md  Taskfile.yaml  justfile
Display_Config/Display_Config/: bun.lockb  components.d.ts  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
Display_Config/Display_Config/src-tauri/: Cargo.toml  tauri.conf.json
Display_Config/Display_Config/src-tauri/capabilities/: default.json
Display_Config/Display_Config/src-tauri/src/: cancellation_registry.rs  channel_test.rs  close_others.rs  config_parser.rs  config_writer.rs  detail_config.rs  download_and_extract.rs  file_commands.rs  get_log_data.rs  inject.rs  language.rs  lib.rs  path_util.rs  performance.rs  player_types.rs  rd_config.rs  relaunch.rs  trainer.rs  transfer_stats.rs  updater.rs  version_info.rs
Display_Config/Display_Config_Resources/: .gitignore  Display_Config_Resources.sln
Display_Config/scripts/: setVersion.ps1
analyze/: bun.lockb  eslint.config.mjs  forward.txt  left.txt  nopress.txt  package.json  tsconfig.json
analyze/src/: GameConfigParser.ts  analyzeReplay.test.ts  analyzeReplay.ts  analyzeReplayFs.ts  classifyMessage.ts  debugKeypress.ts  dumpObjects.ts  exports.ts  index.ts  pathUtil.ts  printCheckpoints.ts  types.node.ts  types.ts
assets/: analyzeReplay-C_RqDkrL.js  analyzeReplay-C_RqDkrL.js.map  circleTool-71d19f6d.js  circleTool-82caba5e.js  circleTool-B7wZ_QJV.css  circleTool-BQYHhzzg.js  circleTool-BdWPmLmF.js  circleTool-BdWPmLmF.js.map  circleTool-C8Fh_FW7.js  circleTool-C8Fh_FW7.js.map  circleTool-CIgsz4KA.css  circleTool-CMsq5nfU.js  circleTool-CT1enpQ9.js  circleTool-CT1enpQ9.js.map  circleTool-CaJ0ylDC.css  circleTool-CbLTXy1h.js  circleTool-CbLTXy1h.js.map  circleTool-ChdIENMF.js  circleTool-ChdIENMF.js.map  circleTool-CkOsjm7I.js  circleTool-CkOsjm7I.js.map  circleTool-CoL_gvMJ.js  circleTool-CoL_gvMJ.js.map  circleTool-D3vbEWEI.css  circleTool-DEOHt_J5.css  circleTool-DNek2GXx.css  circleTool-IV7bXI5V.css  circleTool-ScIM7nTi.js  circleTool-VaE2Phcy.css  circleTool-ba3899fc.js  circleTool-cJagbAHo.js  circleTool-cJagbAHo.js.map  index-3b41af61.css  index-611f2bd2.js  index-6de386ea.css  index-c89fb0d5.js  index-ca32c1c1.css  index-cb4e71ce.css  index-f9ec5b16.js  main-06075085.js  (+55 more)
circleTool/: index.html
meshViewer/: index.html
meshViewerNotes/: CRITICAL_ANALYSIS.md  FIX_NON_INDEXED_GEOMETRY.md  HX_FILE_FORMAT.md  OPTION2_IMPLEMENTATION.md  QUICK_EXTRACTION_GUIDE.md  SOLUTION_SUMMARY.md  UV_ANALYSIS_ZEPPELIN.md  UV_STORAGE_INVESTIGATION.md
meshViewerNotes/aiScripts/: DISCOVERY_MESH_NORMALIZATION.md  EXTRACTION_GUIDE.md  HYPOTHESIS_MESH_TYPES.md  INVESTIGATION_INDEX.md  NEXT_STEPS.md  ORGANIZATION_SUMMARY.md  PHASE1_COORDINATE_SYSTEM.md  PHASE2_BOX_MAPPING.md  PHASE3_UV_SEAMING.md  QUICK_START_BOARD.md  README.md  dumpCompleteGeometry.lua  dumpUVs.lua  dumpVerticesAndUVs.lua  extractBoardIndices.lua  extractBoardUVs.lua  extractComparisonData.lua  extractCompleteGeometry.lua  extractEverything.lua  extractMappingInfo.lua  extractNormalData.lua  extractSpecificBoardUVs.lua  extractTriangleData.lua  extractUVsVerified.lua  findIndices.lua  verifyUVData.lua
replayIdeas/: keyPressIdeas.txt
threejs/: analyzeZeppelin.ts  bun.lockb  circleTool.html  eslint.config.mjs  index.html  package-lock.json  package.json  searchUVsInHX.ts  tsconfig.json  vite.config.js  vite.config.ts
typescript/: package.json
(+178 files in other folders)
