[package]
name = "display-config"
version = "0.4.0"
description = "A launcher for Supreme Snowboarding."
authors = ["domslee"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opener = "0.7.2"
sysinfo = "0.35.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
log = "0.4.27"
futures-util = "0.3.31"
anyhow = "1.0.98"
tauri-plugin-log = "2.4.0"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "default-tls", "stream"] }
uuid = { version = "1.16.0", features = ["v4"] }
tauri-plugin-shell = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
