[package]
name = "display-config"
version = "0.4.3"
description = "A launcher for Supreme Snowboarding."
authors = ["domslee"]
edition = "2024"
default-run = "display-config"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opener = "0.8.2"
sysinfo = "0.35.1"
zip = { version = "4", default-features = false, features = ["deflate"] }
log = "0.4.27"
futures-util = "0.3.31"
anyhow = "1.0.98"
tauri-plugin-log = "2"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "default-tls", "stream"] }
uuid = { version = "1.17.0", features = ["v4"] }
tauri-plugin-shell = "2"
once_cell = "1.21.3"
tauri-plugin-process = "2"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }


# From https://v2.tauri.app/concept/size/
[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
